# courseWork5

./: .env.sample  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
habit_tracker/: settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serilazers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
